# Price-Tagger

./: .gitignore  Cargo.toml  README.md  composer.json  index.html  inserts.sql  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  publish.js
.bruno-collection/Print API/: bruno.json  collection.bru
.bruno-collection/Print API/Labels/: Get Colors.bru  Get Departments.bru  Get Labels.bru  Get Stickers.bru  folder.bru
api/: index.php
src/: main.tsx
src-actix/: lib.rs  main.rs
src-actix/labels/: label_data.rs  label_db.rs  label_endpoint.rs
src/assets/components/: ClothingForm.tsx  EyewearForm.tsx  GeneralForm.tsx  Navigation.tsx  ThemeSwitcher.tsx
src/assets/pages/: ClothingForm.tsx  EyewearForm.tsx  GeneralForm.tsx  Home.tsx
